# studydata

./: Django ImageField图像加载  Django favicon.ico小图标报错解决办法  README.md  django 图像上传注意事项  vue添加jquery和bootstrap
django/: Django favicon.ico小图标报错解决办法  Django+uWSGI+Nginx.docx
flask/: flask_mysql使用文档
liunx下c++python混合编程/: Ubuntu16.04+opencv3.4+boostpython3.5.docx  win10+vs2015+opencv3.4+boost_python3.5.docx
liunx下c++python混合编程/demo/: CMakeLists.txt  ImageProcessAPI.cpp  OpencvConversion.h
liunx下c++python混合编程/make和cmke文件/: CMakeLists.txt  Makefile
liunx下c++python混合编程/python测试/: callcpp.py
liunx下c++python混合编程/所需基础lib文集/: libboost_python35.so.1.68.0
other/: java知识点  pycharm项目上传到Github  常用单词  设计模式
ubuntu/: mysql开启远程权限  ubuntu下vue.js环境搭建初始化项目  ubuntu搭建svn
